<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        tools:context=".PassengerActivity">


    </fragment>

    <Button
        android:id="@+id/btnRequestCar"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginStart="68dp"
        android:background="@drawable/custom_background3"
        android:text="@string/al"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_background3"
        android:onClick="jasmethod"
        android:text="@string/az"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnBeepBeep"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_background3"
        android:text="@string/ax"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnLogoutFromPassengerActivity"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/logout_background"
        android:text="@string/ac"
        android:textColor="#FFFFFF" />

</LinearLayout>