<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btnSend"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/signup_login_background"
        android:text="@string/ad"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMessage" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="230dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_msg_icon"
        android:drawablePadding="1dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/af"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="230dp"
        android:layout_height="43dp"
        android:layout_marginTop="142dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_contact_icon"
        android:drawablePadding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ag"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="336dp"
        android:layout_height="66dp"
        android:layout_marginTop="162dp"
        android:gravity="center"
        android:text="@string/ah"
        android:textColor="#13446A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSend" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="338dp"
        android:layout_height="41dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/msg_back"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/aj"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>