<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SocialmediaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="81dp"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uber_image" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="72dp"
        android:layout_height="43dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="130dp"
        android:background="@drawable/eligius_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/ap"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:layout_marginTop="182dp"
        android:background="@drawable/custom_button_linkedin"
        android:gravity="center"
        android:text="@string/linkedin"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_img_cropped_circle" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="182dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/round_logo_linkedin" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_instagram"
        android:gravity="center"
        android:text="@string/instagram"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/my_img_cropped_circle" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/round_logo_instagram" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_facebook"
        android:gravity="center"
        android:text="@string/facebook"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/my_img_cropped_circle" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/round_logo_facebook" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_github"
        android:gravity="center"
        android:text="@string/github"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/my_img_cropped_circle" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/round_logo_github" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="204dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_techaddicts"
        android:gravity="center"
        android:text="@string/techaddicts"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/my_img_cropped_circle" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/round_logo_techaddicts" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:onClick="linkedin_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:onClick="instagram_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:onClick="facebook_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:onClick="github_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:onClick="techaddicts_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

</androidx.constraintlayout.widget.ConstraintLayout>